# asuro

./: .gitignore
flashtool_binaries_original/: asurocon  asuroflash
flashtool_src/: .gitignore  Asuro.h  AsuroFl.ini  Makefile  Makefile.am  Makefile.in  PosixSerial.cpp  PosixSerial.h  a.out  asurocon  build  testprog.c
src/FirstTry/: asuro.c  asuro.h  test.c  test.hex
src/Run/: AsuroFl.ini  Makefile  asuro.c  asuro.h  run.c  run.h  run.hex
