####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = con_flash

## INCLUDES were found outside kdevelop specific part

con_flash_SOURCES = Serial.cpp PosixSerial.cpp Con_Flash.cpp Asuro.cpp ANSIAsuro.cpp 
con_flash_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = ANSIAsuro.cpp ANSIAsuro.h Asuro.cpp Asuro.h Con_Flash.cpp PosixSerial.cpp PosixSerial.h Serial.cpp Serial.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
con_flash_LDFLAGS = $(all_libraries) 
                                                                                
